# astro_bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: cron.py  telegram.py
astro_bot/: config.py  llm.py  natal_import.py  prompts.py
data/: anna_natal.json
docs/plans/: 2026-06-17-astro-bot.md
docs/specs/: 2026-06-17-astro-bot-design.md
docs/superpowers/specs/: 2026-06-21-astro-bot-vercel-design.md
src/astro_bot/: bot.py  config.py  ephemeris.py  forecast.py  handlers.py  llm.py  prompts.py  store.py  telegram_api.py
src/astro_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bot.py  test_config.py  test_ephemeris.py  test_forecast.py  test_handlers.py  test_llm.py  test_natal_import.py  test_prompts.py  test_store.py
