[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyswisseph>=2.10",
    "openai>=1.40",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.vercel]
entrypoint = "app.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["astro_bot*"]

[tool.pytest.ini_options]
pythonpath = ["."]
